@@ -57,7 +57,7 @@ Name: "CreateStartupIcon"; Description: "Run {#MyAppName} on Windows startup"; G
 Source: "ShareX\bin\Release\*.exe"; Excludes: *.vshost.exe; DestDir: {app}; Flags: ignoreversion
 Source: "ShareX\bin\Release\*.pdb"; DestDir: {app}; Flags: ignoreversion
 Source: "ShareX\bin\Release\*.dll"; DestDir: {app}; Flags: ignoreversion
-Source: "ShareX\bin\Release\*.wav"; DestDir: {app}; Flags: ignoreversion
+;Source: "ShareX\bin\Release\*.wav"; DestDir: {app}; Flags: ignoreversion
 Source: "ShareX\bin\Release\*.xml"; Excludes: Newtonsoft.Json.xml; DestDir: {app}; Flags: ignoreversion recursesubdirs
 Source: "ShareX\bin\Release\*.html"; DestDir: {app}; Flags: ignoreversion recursesubdirs
 
